trying to fix image height issues on mobile safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,8 +44,6 @@ p.lead {
 }
 .img-href {
     margin: auto 0;
-    display:flex;
-    justify-content:space-between;
 }
 .img-href:hover{
     text-decoration:none;
